@startuml
title 集約を表すクラス図（NG）

class User {
  - userID: UserID
  - userName: UserName
  + ChangeName(userName UserName) error
}

class UserID {
  - value: string
}

class UserName {
  - value: string
}

class Circle {
  - circleName: CircleName
  - circleID: CircleID
  - members: User[]
  + ChangeName(name CircleName) error
  + Join(member User) error
}

note left
* User は Circle と独立して存在する別集約
* サークルが消えてもユーザは残るので白菱形
* NG: User 本体を Circle が持っている
* Circle 経由で名前変更などしがち
endnote

class CircleName {
  value: string
}
class CircleID {
  value: string
}

User *-- UserID: コンポジション
User *-- UserName: コンポジション
Circle *-- CircleID: コンポジション
Circle *-- CircleName: コンポジション
Circle o-- User: 集約
@enduml
